--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 
 <body>
   <main>
+    <div><button class="connect__metamask">Connect to Metamask</button></div>
     <form class="form" id="form">
       <div class="label__container">
         <label class="label">
@@ -33,14 +34,19 @@
           <input type="number" class="input digitB" placeholder="digit B" name="digitB">
         </label>
       </div>
-      <button id="button" type="submit" class="button">Calculate
+      <button id="button" type="submit" class="button" disabled>Calculate
         <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-        <svg fill="#000000" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" class="ethereum__icon">
+        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" class="ethereum__icon">
           <path
             d="M15.927 23.959l-9.823-5.797 9.817 13.839 9.828-13.839-9.828 5.797zM16.073 0l-9.819 16.297 9.819 5.807 9.823-5.801z" />
         </svg>
       </button>
+
       <span class="loader"></span>
+
+
+      
+
       <div class="result__container">
         <p class="result">Result</p>
       </div>
